packages/cbl_ffi/lib/src/replicator.dart


class ReplicatorBindings extends Bindings {
  ReplicatorBindings(Bindings parent) : super(parent) {
    _endpointNewWithUrl =
        libs.cbl.lookupFunction<CBLEndpoint_NewWithURL, CBLEndpoint_NewWithURL>(
      'CBLEndpoint_NewWithURL',
    );
    _endpointNewWithLocalDB = libs.cblEE?.lookupFunction<
        CBLEndpoint_NewWithLocalDB, CBLEndpoint_NewWithLocalDB>(
      'CBLEndpoint_NewWithLocalDB',
    );
    _endpointFree =
        libs.cbl.lookupFunction<CBLEndpoint_Free_C, CBLEndpoint_Free>(
      'CBLEndpoint_Free',
    );
    _authNewBasic = libs.cbl.lookupFunction<CBLAuth_NewBasic, CBLAuth_NewBasic>(
      'CBLAuth_NewBasic',
    );
    _authNewSession =
        libs.cbl.lookupFunction<CBLAuth_NewSession, CBLAuth_NewSession>(
      'CBLAuth_NewSession',
    );
    _authFree = libs.cbl.lookupFunction<CBLAuth_Free_C, CBLAuth_Free>(
      'CBLAuth_Free',
    );
    _new = libs.cblDart
        .lookupFunction<CBLDart_CBLReplicator_New, CBLDart_CBLReplicator_New>(
      'CBLDart_CBLReplicator_New',
    );
    _bindToDartObject = libs.cblDart.lookupFunction<
        CBLDart_BindReplicatorToDartObject_C,
        CBLDart_BindReplicatorToDartObject>(
      'CBLDart_BindReplicatorToDartObject',
    );
    _resetCheckpoint = libs.cbl.lookupFunction<CBLReplicator_ResetCheckpoint_C,
        CBLReplicator_ResetCheckpoint>(
      'CBLReplicator_ResetCheckpoint',
    );
    _start =
        libs.cbl.lookupFunction<CBLReplicator_Start_C, CBLReplicator_Start>(
      'CBLReplicator_Start',
    );
    _stop = libs.cbl.lookupFunction<CBLReplicator_Stop_C, CBLReplicator_Stop>(
      'CBLReplicator_Stop',
    );
    _setHostReachable = libs.cbl.lookupFunction<
        CBLReplicator_SetHostReachable_C, CBLReplicator_SetHostReachable>(
      'CBLReplicator_SetHostReachable',
    );
    _setSuspended = libs.cbl.lookupFunction<CBLReplicator_SetSuspended_C,
        CBLReplicator_SetSuspended>(
      'CBLReplicator_SetSuspended',
    );
    _status =
        libs.cbl.lookupFunction<CBLReplicator_Status, CBLReplicator_Status>(
      'CBLReplicator_Status',
    );
    _pendingDocumentIDs = libs.cbl.lookupFunction<
        CBLReplicator_PendingDocumentIDs, CBLReplicator_PendingDocumentIDs>(
      'CBLReplicator_PendingDocumentIDs',
    );
    _isDocumentPending = libs.cblDart.lookupFunction<
        CBLDart_CBLReplicator_IsDocumentPending_C,
        CBLDart_CBLReplicator_IsDocumentPending>(
      'CBLDart_CBLReplicator_IsDocumentPending',
    );
    _addChangeListener = libs.cblDart.lookupFunction<
        CBLDart_CBLReplicator_AddChangeListener_C,
        CBLDart_CBLReplicator_AddChangeListener>(
      'CBLDart_CBLReplicator_AddChangeListener',
    );
    _addDocumentListener = libs.cblDart.lookupFunction<
        CBLDart_CBLReplicator_AddDocumentListener_C,
        CBLDart_CBLReplicator_AddDocumentListener>(
      'CBLDart_CBLReplicator_AddDocumentListener',
    );
  }

  late final CBLEndpoint_NewWithURL _endpointNewWithUrl;
  late final CBLEndpoint_NewWithLocalDB? _endpointNewWithLocalDB;
  late final CBLEndpoint_Free _endpointFree;
  late final CBLAuth_NewBasic _authNewBasic;
  late final CBLAuth_NewSession _authNewSession;
  late final CBLAuth_Free _authFree;
  late final CBLDart_CBLReplicator_New _new;
  late final CBLDart_BindReplicatorToDartObject _bindToDartObject;
  late final CBLReplicator_ResetCheckpoint _resetCheckpoint;
  late final CBLReplicator_Start _start;
  late final CBLReplicator_Stop _stop;
  late final CBLReplicator_SetHostReachable _setHostReachable;
  late final CBLReplicator_SetSuspended _setSuspended;
  late final CBLReplicator_Status _status;
  late final CBLReplicator_PendingDocumentIDs _pendingDocumentIDs;
  late final CBLDart_CBLReplicator_IsDocumentPending _isDocumentPending;
  late final CBLDart_CBLReplicator_AddChangeListener _addChangeListener;
  late final CBLDart_CBLReplicator_AddDocumentListener _addDocumentListener;

  Pointer<CBLEndpoint> createEndpointWithUrl(String url) {
    return stringTable
        .autoFree(() => _endpointNewWithUrl(stringTable.cString(url)));
  }

  Pointer<CBLEndpoint> createEndpointWithLocalDB(
    Pointer<CBLDatabase> database,
  ) {
    return _endpointNewWithLocalDB!(database);
  }

  void freeEndpoint(Pointer<CBLEndpoint> endpoint) {
    _endpointFree(endpoint);
  }

  Pointer<CBLAuthenticator> createBasicAuthenticator(
    String username,
    String password,
  ) {
    return stringTable.autoFree(() => _authNewBasic(
          stringTable.cString(username),
          stringTable.cString(password),
        ));
  }

  Pointer<CBLAuthenticator> createSessionAuthenticator(
    String sessionID,
    String? cookieName,
  ) {
    return stringTable.autoFree(() => _authNewSession(
          stringTable.cString(sessionID),
          cookieName == null ? nullptr : stringTable.cString(cookieName),
        ));
  }

  void freeAuthenticator(Pointer<CBLAuthenticator> authenticator) {
    _authFree(authenticator);
  }

  Pointer<CBLReplicator> createReplicator(
    Pointer<CBLDatabase> database,
    Pointer<CBLEndpoint> endpoint,
    CBLReplicatorType replicatorType,
    bool continuous,
    Pointer<CBLAuthenticator>? authenticator,
    CBLProxyType? proxyType,
    String? proxyHostname,
    int? proxyPort,
    String? proxyUsername,
    String? proxyPassword,
    Pointer<FLDict>? headers,
    Uint8List? pinnedServerCertificate,
    Uint8List? trustedRootCertificates,
    Pointer<FLArray>? channels,
    Pointer<FLArray>? documentIDs,
    Pointer<Callback>? pushFilter,
    Pointer<Callback>? pullFilter,
    Pointer<Callback>? conflictResolver,
  ) {
    return runArena(() {
      return _new(
        _createConfig(
          database,
          endpoint,
          replicatorType,
          continuous,
          authenticator,
          proxyType,
          proxyHostname,
          proxyPort,
          proxyUsername,
          proxyPassword,
          headers,
          pinnedServerCertificate,
          trustedRootCertificates,
          channels,
          documentIDs,
          pushFilter,
          pullFilter,
          conflictResolver,
        ),
        globalCBLError,
      ).checkCBLError();
    });
  }

  void bindReplicatorToDartObject(
    Object object,
    Pointer<CBLReplicator> replicator,
  ) {
    _bindToDartObject(object, replicator);
  }

  void resetCheckpoint(Pointer<CBLReplicator> replicator) {
    _resetCheckpoint(replicator);
  }

  void start(Pointer<CBLReplicator> replicator) {
    _start(replicator);
  }

  void stop(Pointer<CBLReplicator> replicator) {
    _stop(replicator);
  }

  void setHostReachable(Pointer<CBLReplicator> replicator, bool reachable) {
    _setHostReachable(replicator, reachable.toInt());
  }

  void setSuspended(Pointer<CBLReplicator> replicator, bool reachable) {
    _setSuspended(replicator, reachable.toInt());
  }

  CBLReplicatorStatus status(Pointer<CBLReplicator> replicator) {
    return _status(replicator);
  }

  Pointer<FLDict> pendingDocumentIDs(Pointer<CBLReplicator> replicator) {
    return _pendingDocumentIDs(replicator, globalCBLError).checkCBLError();
  }

  bool isDocumentPending(
    Pointer<CBLReplicator> replicator,
    String docID,
  ) {
    return stringTable.autoFree(() {
      return _isDocumentPending(
        replicator,
        stringTable.cString(docID),
        globalCBLError,
      ).checkCBLError().toBool();
    });
  }

  void addChangeListener(
    Pointer<CBLReplicator> replicator,
    Pointer<Callback> listener,
  ) {
    _addChangeListener(replicator, listener);
  }

  void addDocumentListener(
    Pointer<CBLReplicator> replicator,
    Pointer<Callback> listener,
  ) {
    _addDocumentListener(replicator, listener);
  }

  Pointer<CBLDartReplicatorConfiguration> _createConfig(
    Pointer<CBLDatabase> database,
    Pointer<CBLEndpoint> endpoint,
    CBLReplicatorType replicatorType,
    bool continuous,
    Pointer<CBLAuthenticator>? authenticator,
    CBLProxyType? proxyType,
    String? proxyHostname,
    int? proxyPort,
    String? proxyUsername,
    String? proxyPassword,
    Pointer<FLDict>? headers,
    Uint8List? pinnedServerCertificate,
    Uint8List? trustedRootCertificates,
    Pointer<FLArray>? channels,
    Pointer<FLArray>? documentIDs,
    Pointer<Callback>? pushFilter,
    Pointer<Callback>? pullFilter,
    Pointer<Callback>? conflictResolver,
  ) {
    final result = malloc<CBLDartReplicatorConfiguration>().withScoped();

    result.ref
      ..database = database
      ..endpoint = endpoint
      ..replicatorType = replicatorType
      ..continuous = continuous
      ..authenticator = authenticator ?? nullptr
      ..proxy = _createProxySettings(
        proxyType,
        proxyHostname,
        proxyPort,
        proxyUsername,
        proxyPassword,
      )
      ..headers = headers ?? nullptr
      ..pinnedServerCertificate =
          pinnedServerCertificate?.copyToGlobalSliceScoped() ?? nullptr
      ..trustedRootCertificates =
          trustedRootCertificates?.copyToGlobalSliceScoped() ?? nullptr
      ..channels = channels ?? nullptr
      ..documentIDs = documentIDs ?? nullptr
      ..pushFilter = pushFilter ?? nullptr
      ..pullFilter = pullFilter ?? nullptr
      ..conflictResolver = conflictResolver ?? nullptr;

    return result;
  }

  Pointer<CBLProxySettings> _createProxySettings(
    CBLProxyType? type,
    String? hostname,
    int? port,
    String? username,
    String? password,
  ) {
    if (type == null) return nullptr;

    final result = malloc<CBLProxySettings>().withScoped();

    result.ref
      ..type = type
      ..hostname = stringTable.cString(hostname!, arena: true)
      ..port = port!
      ..username = stringTable.cString(username, arena: true)
      ..password = stringTable.cString(password, arena: true, cache: false);

    return result;
  }
}
